Resolved conversations - spacing, name to class, got rid of draggable

--- a/src/components/ToDoListItem/ToDoListItem.scss
+++ b/src/components/ToDoListItem/ToDoListItem.scss
@@ -46,7 +46,7 @@
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-input[name = editInput] {
+input[class=editInput] {
   text-align: center;
   font-size: 1em;
   padding-right: 0;
